Colaborador: Model, API, testes
